apps/fullfoda/base/fullfoda-deploy.yaml
---
# create deployment for fullfoda
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: fullfoda
  namespace: fullfoda
  labels:
    app: fullfoda
    version: 0.0.1
    backstage.io/kubernetes-id: fullfoda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullfoda
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fullfoda
        version: 0.0.1
        backstage.io/kubernetes-id: fullfoda
    spec:
      containers:
      - name: fullfoda
        image: diegoluisi/fullfoda:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
