apps/fullfoda/base/fullfoda-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fullfoda-vs
  namespace: fullfoda
  labels:
    app: fullfoda
    version: 0.0.1
    backstage.io/kubernetes-id: fullfoda
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - fullfoda.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: fullfoda-svc
      weight: 100
